--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/gsap": "^1.20.2",
     "@types/node": "^24.0.12",
+    "@types/swiper": "^5.4.3",
+    "gsap": "^3.13.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
